@@ -75,7 +75,17 @@ writen(int fd, const u_char *ptr, int nbytes)
 int
 set_nonblocking(int fd)
 {
-  if (fcntl(fd, F_SETFL, (fcntl(fd, F_GETFL) | O_NONBLOCK)) < 0)
+  int flags;
+
+  /* According to the Single UNIX Spec, the return value for F_GETFL should
+     never be negative. */
+  if ((flags = fcntl(fd, F_GETFL)) < 0)
+    {
+      zlog_warn("fcntl(F_GETFL) failed for fd %d: %s",
+      		fd, safe_strerror(errno));
+      return -1;
+    }
+  if (fcntl(fd, F_SETFL, (flags | O_NONBLOCK)) < 0)
     {
       zlog_warn("fcntl failed setting fd %d non-blocking: %s",
       		fd, safe_strerror(errno));
